--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@vueuse/core": "^11.0.3",
     "pinia": "^2.2.2",
     "vue": "^3.5.3",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.3",
+    "@iconify/json": "^2.2.246",
     "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.3",
     "eslint": "~9.8.0",
+    "sass": "^1.78.0",
     "typescript": "^5.5.4",
     "unocss": "^0.61.9",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.4",
+    "unplugin-vue-router": "^0.10.7",
     "vite": "^5.4.3",
     "vitest": "^2.0.5",
     "vue-tsc": "^2.1.6"
