--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^11.0.3",
+    "ant-design-vue": "4.x",
     "pinia": "^2.2.2",
     "vue": "^3.5.3",
     "vue-router": "^4.4.3"
@@ -20,12 +21,15 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.3",
     "@iconify/json": "^2.2.246",
+    "@iconify/vue": "^4.1.2",
     "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "~9.8.0",
+    "postcss": "^8.4.45",
     "sass": "^1.78.0",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.5.4",
-    "unocss": "^0.61.9",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.4",
     "unplugin-vue-router": "^0.10.7",
