feat: add radix-vue

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -35,8 +35,6 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.vue",
-    "auto-imports.d.ts",
-    "components.d.ts"
+    "src/**/*.vue"
   ]
 }
