--- a/package.json
+++ b/package.json
@@ -13,28 +13,30 @@
   },
   "dependencies": {
     "@vueuse/core": "^11.0.3",
-    "ant-design-vue": "4.x",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.447.0",
     "pinia": "^2.2.2",
+    "radix-vue": "^1.9.6",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.3",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.3",
     "@iconify/json": "^2.2.246",
-    "@iconify/vue": "^4.1.2",
     "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.3",
     "autoprefixer": "^10.4.20",
     "eslint": "~9.8.0",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "sass": "^1.78.0",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4",
-    "unplugin-auto-import": "^0.18.2",
-    "unplugin-vue-components": "^0.27.4",
-    "unplugin-vue-router": "^0.10.7",
     "vite": "^5.4.3",
     "vitest": "^2.0.5",
     "vue-tsc": "^2.1.6"
-  }
+  },
+  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
